--- a/dos33.html
+++ b/dos33.html
@@ -5042,7 +5042,7 @@ Let the complete clusterfrak of bad design commence in <a class='link' href="htt
 33FF:FF FF FF FF                                                                    ; [44]=T03 === <a class='ts' href='#T2S3'>T2S3</a> === <a class='disk' name='_3400'>disk</a> wastes <i>an <b>entire</b> sector for a <b>single</b> byte!?</i>
 3403:FF FF FF FF                                                                    ; [48]=T04 The real kicker? <a class="d" href="#VDTCDE">VDTCDE</a> <i>isn't even <b>bloody</b> used!</i> *<a class="dumb" href="http://i.imgur.com/iWKad22.jpg">facepalm</a>*
 3407:FF FF FF FF                                                                    ; [4C]=T05
-340B:FF FF FF FF                                                                    ; [50]=T06 We then waste $C8 bytes (256-<a class="v" href=#"VSECAL">VSECAL</a>-<a class="v" href="#VTOC">VTOC</a>)
+340B:FF FF FF FF                                                                    ; [50]=T06 We then proceed to waste $C8 bytes (256-<a class="v" href=#"VSECAL">VSECAL</a>-<a class="v" href="#VTOC">VTOC</a>)
 340F:FF FF FF FF                                                                    ; [54]=T07 to <b>force us to span 2 sectors</b> with this dumb shit
 3413:FF FF FF FF                                                                    ; [58]=T08 instead of copying the VTOC header ($38 byte)
 3417:FF FF FF FF                                                                    ; [5C]=T09 into a new temporary page on init!
