Clarify boot sector usage

--- a/dos33.html
+++ b/dos33.html
@@ -5060,7 +5060,7 @@ Let the complete clusterfrak of bad design commence in <a class='link' href="htt
 3447:FF FF FF FF                                                                    ; [8C]=T15 === <a class="dumb" name="HNTDAFS3">HNTDAFS #3</a> ===
 344B:FF FF FF FF                                                                    ; [90]=T16 DOS is <b>unable</b> to use Track 0 to store user files.
 344F:FF FF FF FF                                                                    ; [94]=T17 This means a non-bootable <i>data disk</i> is robbed of
-3453:FF FF FF FF                                                                    ; [98]=T18 an <i>additional</i> 15 sectors! (Boot sector would display text)
+3453:FF FF FF FF                                                                    ; [98]=T18 an <i>additional</i> 15 sectors! (Boot sector would display non-bootable message)
 3457:FF FF FF FF                                                                    ; [9C]=T19 See File <a class="file" href="#FLOCSEC">FLOCSEC</a>, Func <a class="x" href="#GETSEC">GETSEC</a>, Line <span class="todo">TODO</span>
 345B:FF FF FF FF                                                                    ; [A0]=T1A The <b>smart</b> thing to have done would be to
 345F:FF FF FF FF                                                                    ; [A4]=T1B put the VTOC and CATALOG on <a class='ts'>T0SF</a> - <a class='ts'>T0S1</a>
