Use hex sector designation

--- a/dos33.html
+++ b/dos33.html
@@ -5052,7 +5052,7 @@ Let the complete clusterfrak of bad design commence in <a class='link' href="htt
 3427:FF FF FF FF                                                                    ; [6C]=T0D even though it only uses <b>T2S0 - T2S4</b> !?
 342B:FF FF FF FF                                                                    ; [70]=T0E Instead of wasting <i>yet another track</i> <a class='ts'>T11</a> for meta data
 342F:FF FF FF FF                                                                    ; [74]=T0F 
-3433:FF FF FF FF                                                                    ; [78]=T10    S0=VTOC, S1..15=CATALOG
+3433:FF FF FF FF                                                                    ; [78]=T10    <a class='ts'>S0</a> = VTOC, <a class='ts'>S1</a>-<a class='ts'>SF</a> = CATALOG
 3437:00 00 FF FF                                                                    ; [7C]=T11 
 343B:FF FF FF FF                                                                    ; [80]=T12 if we <i>weren't dumb</i> then both the
 343F:FF FF FF FF                                                                    ; [84]=T13 VTOC &amp; CATLOG would reside on <a class='ts'>T2S5</a> - <a class='ts'>T2SF</a>
