--- a/dos33.html
+++ b/dos33.html
@@ -5055,7 +5055,7 @@ Let the complete clusterfrak of bad design commence in <a class='link' href="htt
 3433:FF FF FF FF                                                                    ; [78]=T10    <a class='ts'>S0</a> = VTOC, <a class='ts'>S1</a>-<a class='ts'>SF</a> = CATALOG
 3437:00 00 FF FF                                                                    ; [7C]=T11 
 343B:FF FF FF FF                                                                    ; [80]=T12 if we <i>weren't dumb</i> then both the
-343F:FF FF FF FF                                                                    ; [84]=T13 VTOC &amp; CATLOG would reside on <a class='ts'>T2S5</a> - <a class='ts'>T2SF</a>
+343F:FF FF FF FF                                                                    ; [84]=T13 VTOC &amp; CATALOG would reside on <a class='ts'>T2S5</a> - <a class='ts'>T2SF</a>
 3443:FF FF FF FF                                                                    ; [88]=T14 
 3447:FF FF FF FF                                                                    ; [8C]=T15 === <a class="dumb" name="HNTDAFS3">HNTDAFS #3</a> ===
 344B:FF FF FF FF                                                                    ; [90]=T16 DOS is <b>unable</b> to use Track 0 to store user files.
